로그인 했을때 부장 페이지

--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -30,7 +30,7 @@
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
-  background: #4CAF50;
+  background: #1c1082;
   width: 100%;
   border: 0;
   padding: 15px;
@@ -88,13 +88,15 @@
 .container .info span .fa {
   color: #EF3B3A;
 }
-body {
-  background: #76b852; /* fallback for old browsers */
-  background: -webkit-linear-gradient(right, #76b852, #8DC26F);
-  background: -moz-linear-gradient(right, #76b852, #8DC26F);
-  background: -o-linear-gradient(right, #76b852, #8DC26F);
-  background: linear-gradient(to left, #76b852, #8DC26F);
-  font-family: "Roboto", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;      
-}
+/* body { */
+/*   background: #6F58F4; fallback for old browsers */
+/*   background: -webkit-linear-gradient(right, #3737dd, #8DC26F); */
+/*   background: -moz-linear-gradient(right, #3737dd, #8DC26F); */
+/*   background: -o-linear-gradient(right, #3737dd, #8DC26F); */
+/*   background: linear-gradient(to left, #3737dd, #8DC26F); */
+/*   font-family: "Roboto", sans-serif; */
+/*   -webkit-font-smoothing: antialiased; */
+/*   -moz-osx-font-smoothing: grayscale;       */
+/* } */
+
+/* #7353D1,#8C5FE8,#6F58F4,#8757ED,#7E47FF,#7353D1,#8C5FE8,#6F58F4 */
